# tello_driver

./: .gitignore  CMakeLists.txt  README.md
docs/: TelloDriver.drawio
examples/: CMakeLists.txt  manual_manouvers.cpp  manual_takeoff.cpp  simple_connection.cpp  simple_land.cpp  simple_takeoff.cpp
include/TelloDriver/: TelloDriver.hpp
src/: TelloDriver.cpp
src/packet_parser/: protocol.cpp  protocol.hpp
src/tello_telemetry/: TelloCommander.cpp  TelloCommander.hpp  TelloLogHeaderMsgObserver.cpp  TelloLogHeaderMsgObserver.hpp  TelloStickCommandsObserver.cpp  TelloStickCommandsObserver.hpp  TelloTelemetry.cpp  TelloTelemetry.hpp
src/tello_telemetry/IncommingDataObservers/: TelloAltLimitMsgObserver.cpp  TelloAttLimitMsgObserver.cpp  TelloConnAckMsgObserver.cpp  TelloConnAckMsgObserver.hpp  TelloFlightDataMsgObserver.cpp  TelloLogDataMsgObserver.cpp  TelloLogHeaderMsgObserver.cpp  TelloLowBatThreshMsgObserver.cpp  TelloPowerOnTimerMsgObserver.cpp  TelloWifiMsgObserver.cpp
src/tello_telemetry/OutGoingCommandsObservers/: TelloAckLogHeaderIdSenderObserver.cpp  TelloStickCommandsObserver.cpp  TelloStickCommandsObserver.hpp
src/tello_telemetry/docs/: TelloTelemetry.drawio
src/tello_telemetry/flight_data/: FlightData.cpp  FlightData.hpp  IFlightDataGetter.hpp
src/tello_telemetry/log_data/: LogData.cpp  LogData.hpp  LogNewImuAttiFeedback.cpp  LogNewImuAttiFeedback.hpp  LogNewMvoFeedback.cpp  LogNewMvoFeedback.hpp
src/tello_telemetry/test/: commands_test.cpp  flight_data_test.cpp  helper.hpp
src/tello_telemetry/utils/: IReciever.hpp  TelloSocket.cpp  TelloSocket.hpp
src/tello_telemetry/utils/async_server/: AsyncServer.cpp  AsyncServer.hpp
src/tello_telemetry/utils/data_manager/: DataManager.cpp  DataManager.hpp  IConnAckMsgDataManager.hpp
src/tello_telemetry/utils/movement_commands/: MovementCommandsManager.cpp  MovementCommandsManager.hpp  MovementsToPacketConverter.cpp  MovementsToPacketConverter.hpp
src/tello_telemetry/utils/movement_commands/test/: movement_commands_manager_test.cpp  movement_commands_manager_test.hpp
src/tello_telemetry/utils/telemetry_data/: TelemetryData.hpp
src/tello_telemetry/utils/tello_observer/: DataMgr.hpp  IDataMgrSubject.hpp  IObserver.hpp  IPositionVelocityObserver.hpp  ISubject.hpp
src/tello_telemetry/utils/test/: socket_test.cpp
src/tello_vis/test/: basic_vis_tests.cpp
src/tello_vis/utils/: TelloVisSocket.cpp
test/: CMakeLists.txt
